src/objects/ddrive__Field_Mappings__c.object
<CustomObject>
    <fields>
        <fullName>ddrive__Configuration__c</fullName>
        <label>DD Instance</label>
        <referenceTo>ddrive__Configuration__c</referenceTo>
        <relationshipLabel>Field Mappings</relationshipLabel>
        <relationshipName>Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ddrive__Do_Not_Overwrite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_Custom_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for determining if the field mapping contains a custom field from DonorDrive.</description>
        <label>Is Custom Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Is_External_Id__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is External Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ddrive__Source_Field__c</fullName>
        <label>Source Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Source_Object__c</fullName>
        <label>Source Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Target_Field__c</fullName>
        <label>Target Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ddrive__Target_Object__c</fullName>
        <label>Target Object</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Field Mapping</label>
    <nameField>
        <label>Field Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Mapping</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>